tests/golden/services/helmetica-framework/helmetica-framework/10_kustomize/chrysopoeia/admissionregistration.k8s.io_v1_validatingwebhookconfiguration_chrysopoeia-dynamic-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: chrysopoeia-dynamic-webhook
webhooks: []
