tests/golden/services/helmetica-framework/helmetica-framework/10_kustomize/chrysopoeia/rbac.authorization.k8s.io_v1_clusterrole_source-manager-role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: source-manager-role
rules:
- apiGroups:
  - ""
  resources:
  - events
  verbs:
  - create
  - patch
- apiGroups:
  - ""
  resources:
  - secrets
  - serviceaccounts
  verbs:
  - get
  - list
  - watch
- apiGroups:
  - ""
  resources:
  - serviceaccounts/token
  verbs:
  - create
- apiGroups:
  - source.toolkit.fluxcd.io
  resources:
  - buckets
  - gitrepositories
  - helmcharts
  - helmrepositories
  - ocirepositories
  verbs:
  - create
  - delete
  - get
  - list
  - patch
  - update
  - watch
- apiGroups:
  - source.toolkit.fluxcd.io
  resources:
  - buckets/finalizers
  - gitrepositories/finalizers
  - helmcharts/finalizers
  - helmrepositories/finalizers
  - ocirepositories/finalizers
  verbs:
  - create
  - delete
  - get
  - patch
  - update
- apiGroups:
  - source.toolkit.fluxcd.io
  resources:
  - buckets/status
  - gitrepositories/status
  - helmcharts/status
  - helmrepositories/status
  - ocirepositories/status
  verbs:
  - get
  - patch
  - update
