tests/golden/services/helmetica-framework/helmetica-framework/10_kustomize/chrysopoeia/rbac.authorization.k8s.io_v1_clusterrolebinding_chrysopoeia-proxy-rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: chrysopoeia-proxy-rolebinding
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: chrysopoeia-proxy-role
subjects:
- kind: ServiceAccount
  name: chrysopoeia-proxy
  namespace: syn-helmetica-framework
