tests/golden/services/helmetica-framework/helmetica-framework/10_kustomize/chrysopoeia/syn-helmetica-framework_rbac.authorization.k8s.io_v1_rolebinding_chrysopoeia-leader-election-rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  labels:
    app.kubernetes.io/component: rbac
    app.kubernetes.io/created-by: chrysopoeia
    app.kubernetes.io/instance: leader-election-rolebinding
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: rolebinding
    app.kubernetes.io/part-of: chrysopoeia
  name: chrysopoeia-leader-election-rolebinding
  namespace: syn-helmetica-framework
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: chrysopoeia-leader-election-role
subjects:
- kind: ServiceAccount
  name: chrysopoeia-controller-manager
  namespace: syn-helmetica-framework
